# vinetalkSuite

./: .gitmodules  LICENSE  README.md
mesosIntegration/conf/: mesos-agent-vaq.sh
mesosIntegration/examples/: vaq_framework.cpp  vineFunCaller.hpp
mesosIntegration/examples/kernelLib/darkGray/: new_image_scrip.sh
mesosIntegration/examples/kernelLib/darkGray/include/: c_darkGray.h  darkGrayArgs.h
mesosIntegration/examples/kernelLib/darkGray/src/: c_darkGray.cpp  compare.cpp  cu_darkGray.cu  vine_darkGray.cpp
mesosIntegration/examples/kernelLib/include/: BlackScholes_kernel.cuh  c_blackScholes.h  cu_darkGray.h  realtype.h  statisticsDefineEnable.h  vineFunCaller.hpp
mesosIntegration/examples/kernelLib/nvidia_samples/blackscholes/: Makefile  README.md
mesosIntegration/examples/kernelLib/nvidia_samples/convolutionSeparable/: Makefile  ReadMe.md
mesosIntegration/examples/kernelLib/nvidia_samples/darkGray/: ReadMe.md
mesosIntegration/examples/kernelLib/nvidia_samples/histogram/: Makefile  ReadMe.md
mesosIntegration/examples/kernelLib/nvidia_samples/montecarlo/: Makefile
mesosIntegration/examples/kernelLib/src/: BlackScholes.cpp  c_darkGray.cpp  cu_darkGray.cu  vine_MonteCarloMultiGPU.cpp  vine_convolutionSeparable.cpp  vine_darkGray.cpp  vine_histogram.cpp
vine_Apps_EG/mesos/conf/: resourcesWithVaq.txt
vine_Apps_EG/mesos/examples/: Makefile  executor_cudablackscholes.cpp  mesos_vine_darkGray.cpp
vine_Apps_EG/mesos/examples/kernelLib/: Makefile
vine_Apps_EG/singleNode/darkGray/: .gitignore  Makefile
vine_Apps_EG/singleNode/darkGray/include/: c_darkGray.h  cu_darkGray.h  darkGrayArgs.h
vine_Apps_EG/singleNode/darkGray/src/: c_darkGray.cpp  compare.cpp  cu_darkGray.cu  vine_darkGray.cpp
vine_Apps_EG/singleNode/opencl_darkGray/: .gitignore  Makefile  ReadMe.md  compareAll.sh  runAll.sh
vine_Apps_EG/singleNode/opencl_darkGray/include/: opencl_darkGray.h
vine_Apps_EG/singleNode/opencl_darkGray/kernels/: darkGray.cl
vine_Apps_EG/singleNode/opencl_darkGray/src/: compare.cpp  opencl_darkGray.cpp  vine_darkGray.cpp
vine_controller/: .gitignore  CMakeLists.txt  README.md  cleanAll.sh  runController+Monitor.sh  runController+Sockets.sh  sla.spec
vine_controller/include/: CPUaccelThread.h  Config.h  FPGAaccelThread.h  Factory.h  FlexyRRScheduler.h  Formater.h  GPUaccelThread.h  NanoCoreaccelThread.h  SDAaccelThread.h  Scheduler.h  Utilities.h  VineLibMgr.h  VineLibUtilsCPU.h  VineLibUtilsGPU.h  VineLibUtilsNanoCore.h  VineLibUtilsSDA.h  VineRoundRobinScheduler.h  WeightedRoundRobinScheduler.h  accelThread.h  definesEnable.h.cmake  prepareGPU.cuh  timers.h
vine_controller/include/occupancy/: cupti.h  cupti_activity.h  cupti_callbacks.h  cupti_driver_cbid.h  cupti_events.h  cupti_metrics.h  cupti_nvtx_cbid.h  cupti_result.h  cupti_runtime_cbid.h  cupti_version.h  generated_cuda_meta.h  generated_cuda_runtime_api_meta.h  generated_nvtx_meta.h
vine_controller/include/occupancy/openacc/: cupti_openacc.h
vine_controller/monitoringTool/: Makefile  READMe  common.c  common.h  count.c  count.h  monitoringThread.cu  rd_stats.h
vine_controller/processes/: Makefile  ReadMe  accelProcess.cpp
vine_controller/src/: CPUaccelThread.cpp  Config.cpp  FPGAaccelThread.cpp  GPUaccelThread.cpp  NanoCoreaccelThread.cpp  ResetGpu.cpp  SDAaccelThread.cpp  Scheduler.cpp  Utilities.cpp  VineLibMgr.cpp  VineRoundRobinScheduler.cpp  accelThread.cpp  creatConfig.cu  occupancy.cu  prepareGPU.cu  vine_controller.cpp  xcl.cpp
vine_talk/JVTalk/: VineAccelerator.java  VineBuffer.java  VineObject.java  VineProcedure.java  VineTalkInterface.java  VineTask.java  Vinetalk.java  hello.java
vine_talk/examples/: consumer.c  producer.c  queue_test.c
vine_talk/include/: conf.h  vine_pipe.h  vine_talk.h  vine_talk_types.h
vine_talk/src/arch/: alloc.h
vine_talk/src/arch/dummy/: alloc.c  vine_talk.c
vine_talk/src/arch/shm/: alloc.c  vine_talk.c
vine_talk/src/async/ivshmem/: async.c  async.h
vine_talk/src/async/mutex/: async.c  async.h
vine_talk/src/async/spin/: async.c  async.h
vine_talk/src/core/: vine_accel.c  vine_accel.h  vine_accel_types.c  vine_accel_types.h  vine_buffer.c  vine_buffer.h  vine_data.c  vine_data.h  vine_object.c  vine_object.h  vine_pipe.c  vine_proc.c  vine_proc.h  vine_task.c  vine_task.h  vine_vaccel.c  vine_vaccel.h
vine_talk/src/utils/: breakdown.c  breakdown.h  btgen.c  btgen.h  compat.h  config.c  config.h  list.c  list.h  queue.c  queue.h  spinlock.h  system.c  system.h  timer.h  trace.c  trace.h
(+30 files in other folders)
